docs/tests/typing/bad/testfile-assign-2.cpp

int main() { 0 = 1; }
